[gd_scene format=3 uid="uid://dcl768gtkchcy"]

[ext_resource type="Script" uid="uid://dfbjq2yvmg8rc" path="res://UI/shop_manager.gd" id="1_shop"]
[ext_resource type="Texture2D" uid="uid://baisxvaua8yg5" path="res://Sprites/floor/2 Objects/shop/image.png" id="2_shop"]

[node name="TowerShop" type="Control" unique_id=786442841]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -280.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_shop")

[node name="ShopBackground" type="Sprite2D" parent="." unique_id=1739204218]
position = Vector2(431.00003, 249.71251)
scale = Vector2(0.55996084, 0.4447509)
texture = ExtResource("2_shop")

[node name="ButtonContainer" type="Control" parent="." unique_id=77488923]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="Panel" parent="." unique_id=716645022]
visible = false
layout_mode = 0

[node name="NotEnoughMoneyLabel" type="Label" parent="." unique_id=245411852]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -25.0
offset_right = 80.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.98, 0, 0, 1)
text = "Not Enough Money!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CurrencyLabel" type="Label" parent="." unique_id=1546089682]
visible = false
layout_mode = 0

[node name="RefreshButton" type="Button" parent="." unique_id=729281829]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 245.0
offset_top = -94.0
offset_right = 367.0
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 18
text = "Refresh (5ðŸ’Ž)"
